--- a/celebrate/assets/css/mybookings.css
+++ b/celebrate/assets/css/mybookings.css
@@ -24,6 +24,44 @@ p {
     line-height: 1.5em;
 }
 
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #2e2b2b;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #2e2b2b transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
 section .display-4 {
     font-weight: 400;
 }
@@ -113,22 +151,22 @@ section .display-4 {
     color: var(--secondary-color);
 }
 
-#bookings .bookings-table {
-    display: flex;
-    justify-content: stretch;
-    align-items: center;
+#bookings .bookings-row {
+    overflow-x: auto;
 }
 
 #bookings .bookings-table table {
     width: 100%;
     height: auto;
     border-collapse: collapse;
+    white-space: nowrap;
 }
 
 #bookings .bookings-table table th, #bookings .bookings-table table td {
     text-align: left;
     padding: 10px 0;
     padding-left: 20px;
+    padding-right: 20px;
     border-bottom: 1px solid var(--light-gray-color);
 }
 
@@ -151,6 +189,10 @@ section .display-4 {
     height: 45px;
 }
 
+#bookings .bookings-row-totals {
+    overflow-x: auto;
+}
+
 #bookings .bookings-table-2 {
     display: flex;
     justify-content: flex-end;
@@ -161,12 +203,14 @@ section .display-4 {
     width: 50%;
     height: auto;
     border-collapse: collapse;
+    white-space: nowrap;
 }
 
 #bookings .bookings-table-2 table th, #bookings .bookings-table-2 table td {
     text-align: left;
     padding: 10px 0;
     padding-left: 20px;
+    padding-right: 20px;
     border-bottom: 1px solid var(--light-gray-color);
 }
 
@@ -189,6 +233,13 @@ section .display-4 {
     height: 45px;
 }
 
+#bookings .booking-actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
 /* ======= Media Queries ======= */
 
 @media only screen and (max-width: 768px) {
@@ -197,6 +248,11 @@ section .display-4 {
     }
     #bookings .col-bookings {
         width: 100%;
+    }
+    #bookings .bookings-table-2 {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
     }
 }
 
@@ -224,9 +280,6 @@ section .display-4 {
         flex-direction: column;
         margin-bottom: 11px;
     }
-    #bookings .bookings-table table {
-        overflow-x: scroll;
-    }
 }
 
 @media only screen and (max-width: 326px) {
@@ -250,6 +303,18 @@ section .display-4 {
         margin-left: 12px;
         margin-top: 20px;
         background: var(--gray-color);
+    }
+    .booking-actions .btn-remove {
+        padding: 10px 20px;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    .booking-actions .btn {
+        font-size: 11px;
+    }
+    .booking-actions .btn-remove {
+        padding: 10px 18px;
     }
 }
 
