--- a/celebrate/assets/css/utilities.css
+++ b/celebrate/assets/css/utilities.css
@@ -68,6 +68,13 @@
 
 @media only screen and (max-width: 768px) {
     .flex, .flex-space-around, .flex-space-between, .flex-space-evenly, .even-columns {
+        flex-flow: row wrap;
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 476px) {
+    .flex, .flex-space-around, .flex-space-between, .flex-space-evenly, .even-columns {
         flex-flow: column wrap;
         justify-content: center;
     }
@@ -179,6 +186,7 @@
     border: none;
     border-radius: 5px;
     transition: all .4s ease-in-out;
+    white-space: nowrap;
 }
 
 .btn-outline {
