--- a/celebrate/assets/css/book_mc.css
+++ b/celebrate/assets/css/book_mc.css
@@ -52,201 +52,6 @@ section .display-4 {
 /* ==== End Query ===== */
 
 /* ==================================================
-# Contact
-===================================================*/
-
-#contact {
-    padding-top: 80px;
-    padding-bottom: 60px;
-}
-
-#contact .container {
-    padding-top: 60px;
-}
-
-#contact .display-4 {
-    position: relative;
-    font-size: 30px;
-}
-
-#contact p.lead {
-    font-size: 18px;
-}
-
-#contact .display-4::before {
-    position: absolute;
-    content: '';
-    width: 100px;
-    height: 2px;
-    margin-left: -116px;
-    margin-top: 20px;
-    background: var(--gray-color);
-}
-
-#contact .display-4::after {
-    position: absolute;
-    content: '';
-    width: 100px;
-    height: 2px;
-    margin-left: 19px;
-    margin-top: 20px;
-    background: var(--gray-color);
-}
-
-#contact .col-form {
-    flex-basis: 70%;
-}
-
-#contact .col-address {
-    flex-basis: 30%;
-}
-
-#contact .contact-form form input, #contact .contact-form textarea {
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    width: 100%;
-    padding: 12px 24px;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    background: var(--white-color);
-}
-
-#contact .contact-form form .inputs-text-box {
-    display: flex;
-    justify-content: space-between;
-    gap: 0.7em;
-    margin-bottom: 10px;
-}
-
-#contact .contact-form form input[type=submit] {
-    margin-top: 10px;
-    background: var(--primary-color);
-    color: var(--light-color);
-    transition: all 0.5s ease;
-}
-
-#contact .contact-form form input[type=submit]:hover {
-    color: var(--light-gray-color);
-    cursor: pointer;
-}
-
-#contact .card {
-    margin: 0px;
-}
-
-#contact .col-address {
-    border-radius: 5px;
-}
-
-#contact .contact-address h3 {
-    color: var(--secondary-color);
-    font-size: 20px;
-    font-weight: 650;
-    line-height: 3.0rem;
-}
-
-#contact .contact-address .addr-wrap {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2.0em;
-}
-
-#contact .contact-address .addr-wrap .fas {
-    font-size: 25px;
-    color: var(--secondary-color);
-    margin-top: -37px;
-}
-
-/* ======= Media Queries ======= */
-
-@media only screen and (max-width: 1060px) {
-    #contact .container {
-        padding-left: 100px;
-        padding-right: 100px;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    #contact .container {
-        padding-left: 60px;
-        padding-right: 60px;
-    }
-    #contact .col-form {
-        width: 100%;
-    }
-    #contact .col-address {
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 576px) {
-    #contact .container {
-        padding: 40px 30px;
-    }
-    #contact p.lead {
-        font-size: 16px;
-    }
-    #contact .contact-address .addr-wrap .addr {
-        font-size: 14px;
-    }
-    #contact .display-4 {
-        font-size: 30px;
-        padding: 0 40px;
-    }
-    #contact .display-4::before {
-        position: absolute;
-        content: '';
-        width: 50px;
-        height: 3px;
-        margin-left: -58px;
-        margin-top: 24px;
-        background: var(--gray-color);
-    }
-    #contact .display-4::after {
-        position: absolute;
-        content: '';
-        width: 50px;
-        height: 3px;
-        margin-left: 12px;
-        margin-top: 24px;
-        background: var(--gray-color);
-    }
-    #contact .contact-form form .inputs-text-box {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        margin-bottom: 11px;
-    }
-}
-
-@media only screen and (max-width: 326px) {
-    #contact .display-4 {
-        font-size: 30px;
-    }
-    #contact .display-4::before {
-        position: absolute;
-        content: '';
-        width: 30px;
-        height: 3px;
-        margin-left: -39px;
-        margin-top: 20px;
-        background: var(--gray-color);
-    }
-    #contact .display-4::after {
-        position: absolute;
-        content: '';
-        width: 30px;
-        height: 3px;
-        margin-left: 12px;
-        margin-top: 20px;
-        background: var(--gray-color);
-    }
-}
-
-/* ======= End Queries ======== */
-
-/* ==================================================
 # MCs
 ===================================================*/
 
@@ -307,6 +112,8 @@ section .display-4 {
 #mcs .btn-cart {
     border: none;
     outline: none;
+    text-decoration: none;
+    text-align: center;
     background: var(--secondary-color);
     padding: 9px 24px;
     border-radius: 5px;
