--- a/celebrate/assets/css/checkout.css
+++ b/celebrate/assets/css/checkout.css
@@ -217,9 +217,10 @@ section .display-4 {
         padding: 0 25px;
     }
     #sign_up .display-4 {
-        text-align: center;
+        text-align: left;
         font-size: 40px;
-        margin-bottom: 10px;
+        padding: 20px 20px;
+        margin-bottom: 0px;
     }
     #sign_up .user-order-1 {
         order: 1;
